fixed some issues

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
             </div>
             <div><button class="nav-button">Search</button></div>
           </div>
+          <div class="menu-icon">
+            <img src="./assets/menu-icon.svg" alt="" srcset="">
+          </div>
         </nav>
       </section>
       <!-- Hero Banner Section -->
